--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,83 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+
+*, *::before, *::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    padding: 40px;
+}
+
+.firestoredemo {
+    .title {
+        margin: 2rem 0;
+    }
+
+    .user {
+
+        &__form {
+            background: #fff;
+            color: #212121;
+            margin: 8px 0;
+            display: flex;
+            align-items: flex-end;
+
+            div {
+                margin: 0 8px;
+                flex: 1;
+            }
+
+            label {
+                display: inline-block;
+                font-size: .9rem;
+                margin-bottom: 4px;
+                margin-left: 4px;
+                color: #444;
+                text-transform: uppercase;
+                letter-spacing: 1px;
+            }
+
+            input, select {
+                width: 100%;
+                padding: 8px 12px;
+                border: 1px solid #ddd;
+                border-radius: 4px;
+
+                &:focus {
+                    border-color: blue;
+                }
+            }
+
+            button {
+                border-radius: 4px;
+                background: blue;
+                color: #fff;
+                flex: 0;
+                cursor: pointer;
+                user-select: none;
+                border: 1px solid blue;
+                padding: 8px 12px;
+            }
+        }
+
+        &__list {
+            display: inline-flex;
+            flex-wrap: wrap;
+        }
+
+        &__card {
+            background: #fff;
+            color: #212121;
+            padding: 10px 12px;
+            border-radius: 8px;
+            box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.15);
+            margin: 8px;
+            width: 15rem;
+
+            * {
+                margin-bottom: 8px
+            }
+        }
+    }
+}
