--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'swiper/scss';
+@import 'swiper/scss/pagination';
+@import 'swiper/scss/autoplay';
