--- a/src/assets/styles/ui_style.scss
+++ b/src/assets/styles/ui_style.scss
@@ -70,6 +70,10 @@ section {
     background-color: #f5f6f7;
 }
 
+.section-bg-custom {
+    background-color: #f5f6f7 !important;
+}
+
 .section-header {
     text-align: center;
     padding-bottom: 70px;
@@ -2575,7 +2579,7 @@ section {
 --------------------------------------------------------------*/
 .footer {
     color: #fff;
-    background: url('../img/footer-bg.jpg') top center no-repeat;
+    background: url('../images/footer-bg.jpg') top center no-repeat;
     background-size: cover;
     font-size: 14px;
     padding: 80px 0 60px 0;
