--- a/src/assets/styles/ui_style.scss
+++ b/src/assets/styles/ui_style.scss
@@ -496,7 +496,9 @@ section {
     }
 
     .mobile-nav-show {
-        position: relative;
+        position: absolute;
+        right: 20px;
+        top: 20px;
         color: #fff;
         font-size: 28px;
         cursor: pointer;
@@ -2718,4 +2720,16 @@ section {
 
 .social-links-comming a:hover {
     text-decoration: none;
+}
+
+.mobile-footer {
+    background-color: red;
+    position: sticky;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 50px;
+    color: #ffff;
 }
