--- a/src/assets/styles/ui_style.scss
+++ b/src/assets/styles/ui_style.scss
@@ -432,16 +432,17 @@ section {
     .navbar {
         position: fixed;
         top: 0;
-        right: -100%;
+        right: 0;
         width: 100%;
         max-width: 400px;
         bottom: 0;
         transition: 0.3s;
         z-index: 9997;
+        display: none;
     }
 
     .navbar ul {
-        position: absolute;
+        position: fixed;
         inset: 0;
         padding: 50px 0 10px 0;
         margin: 0;
@@ -525,7 +526,8 @@ section {
     }
 
     .mobile-nav-active .navbar {
-        right: 0;
+        // right: 0;
+        display: block;
     }
 
     .mobile-nav-active .navbar:before {
